[gd_scene load_steps=2 format=3 uid="uid://dsvl51gcmh51h"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ro7jp"]

[node name="UI" type="CanvasLayer"]
layer = 99
script = ExtResource("1_ro7jp")

[node name="SidePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 817.0
offset_top = -1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTurnButton" type="Button" parent="."]
anchors_preset = -1
anchor_top = 0.952
anchor_right = 0.068
anchor_bottom = 1.0
offset_top = 0.104004
offset_right = -0.336006
text = "End Turn"

[node name="DebubPanelButton" type="Button" parent="."]
anchors_preset = -1
anchor_top = 0.952
anchor_right = 0.068
anchor_bottom = 1.0
offset_left = 79.0
offset_top = 1.104
offset_right = 78.664
offset_bottom = 1.0
text = "Toggle Debug Panel"

[node name="ShowInfoButton" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1007.0
offset_top = 609.0
offset_right = -11.0
offset_bottom = -8.0
text = "Show Side Panel"

[node name="DebugPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = -819.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsContainer" type="GridContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 142.0
offset_right = -1.0
offset_bottom = -292.0

[node name="Toggle Tiles Visibility" type="Button" parent="DebugPanel/ButtonsContainer"]
layout_mode = 2
text = "Toggle Tiles Visibility"

[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="DebubPanelButton" to="." method="_on_debub_panel_button_pressed"]
[connection signal="pressed" from="ShowInfoButton" to="." method="_on_show_info_button_pressed"]
[connection signal="pressed" from="DebugPanel/ButtonsContainer/Toggle Tiles Visibility" to="." method="_on_toggle_tiles_visibility_pressed"]
